utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ModuleConfigurationOrderConfiguration.ide
package valid

typedef configuration ModuleConfigurationOrderConfiguration {
    backend task main
}
