utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ExcludeNeededConfiguration.ide
package invalid

typedef configuration ExcludeNeededConfiguration {
    backend task main
}
